@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-15T02:26:06Z",
-  "count" : 10,
+  "timestamp" : "2022-09-15T16:30:42Z",
+  "count" : 2,
   "count_minmax" : [ 1, 11 ],
-  "count_decinc" : [ -1, +11 ],
-  "uniques" : 6,
+  "count_decinc" : [ -9, +11 ],
+  "uniques" : 2,
   "uniques_minmax" : [ 1, 6 ],
-  "uniques_decinc" : [ -0, +6 ]
+  "uniques_decinc" : [ -4, +6 ]
 }
