@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-09-15T08:30:34Z",
+  "timestamp" : "2022-09-15T16:30:42Z",
   "count_outdated" : 121,
   "uniques_outdated" : 22,
-  "count" : 149,
-  "uniques" : 39,
+  "count" : 142,
+  "uniques" : 35,
   "clones" : [
     {
       "timestamp": "2022-09-01T00:00:00Z",
-      "count": 10,
+      "count": 2,
       "count_minmax": [ 1, 11 ],
-      "uniques": 6,
+      "uniques": 2,
       "uniques_minmax": [ 1, 6 ]
     },
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-09-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
