@@ -1,11 +1,11 @@
 {
-  "count": 28,
-  "uniques": 7,
+  "count": 21,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-09-01T00:00:00Z",
-      "count": 10,
-      "uniques": 6
+      "count": 2,
+      "uniques": 2
     },
     {
       "timestamp": "2022-09-02T00:00:00Z",
@@ -54,7 +54,7 @@
     },
     {
       "timestamp": "2022-09-15T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
